# deepsearch

./: .env.sample  .gitignore  README.md  deepsearch_config.yaml  index_video.py  pyproject.toml  requirements.txt  run_deepsearch.py  sample_end_user_usage.py
deepsearch/: __init__.py  client.py
deepsearch/config/: __init__.py  defaults.py  schema.py
deepsearch/errors/: __init__.py  codes.py
deepsearch/indexing/: __init__.py  contracts.py  pipeline.py  subplot_summarizer.py  videodb_indexer.py  vlm_extractor.py
deepsearch/indexing/prompts/: vlm_extract.yaml
deepsearch/providers/detector/: __init__.py  base.py  rtdetr.py
deepsearch/providers/llm/: __init__.py  base.py  client_factory.py  openai_provider.py  registry.py
deepsearch/retrieval/: contracts.py  graph.py  state.py
deepsearch/retrieval/helpers/: batch_apply.py  delta.py  join.py  prompts.py  reason_codes.py  registry.py  schema.py
deepsearch/retrieval/nodes/: interpreter.py  none_analyzer.py  plan_init.py  reranker.py  search_join.py  validator.py
deepsearch/retrieval/prompts/: create_query_from_description.txt  deepsearch_run.yaml  interpreter.txt  none_analyzer.txt  objects.txt  paraphrase.txt  plan_init.txt  reranker.txt  validator.txt
deepsearch/stores/: __init__.py  base.py  memory.py  sqlite.py
deepsearch/telemetry/: logger.py
docs/: PRD.md  specs.md
tests/: test_all.py
