[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsearch"
version = "0.1.0"
description = "Multi-turn deep search with LLM-powered query planning, validation, and refinement"
requires-python = ">=3.10"
dependencies = [
    "videodb @ git+https://github.com/video-db/videodb-python@experimental",
    "openai>=1.30.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
detection = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
include = ["deepsearch*"]

[tool.setuptools.package-data]
deepsearch = ["retrieval/prompts/*.txt", "retrieval/prompts/*.yaml"]
